# ChangeLog for dev-python/py2play
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/py2play/ChangeLog,v 1.19 2009/02/15 22:38:23 patrick Exp $

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> py2play-0.1.9.ebuild:
  Adding ~amd64 keyword

  15 Jul 2006; Alastair Tse <liquidx@gentoo.org> -py2play-0.1.2.ebuild,
  -py2play-0.1.6.ebuild, -py2play-0.1.7.ebuild:
  security cleanup (#140496)

  14 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  py2play-0.1.9.ebuild:
  ppc stable, bug #103524

  13 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> py2play-0.1.9.ebuild:
  Stable on x86 wrt bug #103524.

*py2play-0.1.9 (11 Jun 2006)

  11 Jun 2006; Bryan Østergaard <kloeri@gentoo.org> +py2play-0.1.9.ebuild:
  Bump version, removing network code. This fixes bug 103524.

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> py2play-0.1.7.ebuild:
  Stable on ppc.

  10 Feb 2005; Bryan Østergaard <kloeri@gentoo.org> py2play-0.1.7.ebuild:
  x86 stable bump.

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*py2play-0.1.7 (16 Oct 2004)

  16 Oct 2004; Bryan Østergaard <kloeri@gentoo.org> +py2play-0.1.7.ebuild:
  Version bump.

  03 Aug 2004; David Holm <dholm@gentoo.org> py2play-0.1.6.ebuild:
  Added to ~ppc.

  12 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> py2play-0.1.6.ebuild:
  stablize since there have been no bugs reported.

  12 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> py2play-0.1.5.ebuild:
  clean older ebuild

  12 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml:
  py2play is only used by slune right now so adding games to the metadata file

  12 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> py2play-0.1.6.ebuild:
  use distutils src_install(); tidy

*py2play-0.1.6 (21 Dec 2003)

  21 Dec 2003; Bryan Østergaard <kloeri@gentoo.org> py2play-0.1.6.ebuild:
  Version bump

*py2play-0.1.5 (05 Dec 2003)
