@@ -1,10 +1,16 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/py2play/py2play-0.1.9.ebuild,v 1.4 2009/02/15 22:38:23 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/py2play/py2play-0.1.9.ebuild,v 1.5 2010/12/24 22:39:52 arfrever Exp $
+
+EAPI="3"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS="3.*"
 
 inherit distutils
 
-MY_P=${P/py2play/Py2Play}
+MY_P="${P/py2play/Py2Play}"
+
 DESCRIPTION="A Peer To Peer network game engine"
 HOMEPAGE="http://home.gna.org/oomadness/en/slune"
 SRC_URI="http://download.gna.org/slune/${MY_P}.tar.gz"
@@ -14,6 +20,7 @@ SLOT="0"
 KEYWORDS="~amd64 ppc x86"
 IUSE=""
 
-DEPEND=">=dev-lang/python-2.2.2"
+DEPEND=""
+RDEPEND=""
 
 S="${WORKDIR}/${MY_P}"
