@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/py2play
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/py2play/ChangeLog,v 1.19 2009/02/15 22:38:23 patrick Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/py2play/ChangeLog,v 1.20 2010/12/24 22:39:52 arfrever Exp $
+
+  24 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  py2play-0.1.9.ebuild:
+  Fix dependencies. Set SUPPORT_PYTHON_ABIS.
 
   15 Feb 2009; Patrick Lauer <patrick@gentoo.org> py2play-0.1.9.ebuild:
   Adding ~amd64 keyword
